# GTestPoc

./: CMakeLists.txt  LICENSE  README.md
include/: Addition.hpp  Multiply.cpp~  Multiply.hpp  Multiply.hpp~  Mystring.hpp  Mystring.hpp~
src/: Addition.cpp  Addition.cpp~  Addition.hpp~  Multiply.cpp  Multiply.cpp~  Multiply.hpp~  Mystring.cpp  Mystring.cpp~  Mystring_test.cpp~
test/: Addition_test.cpp  Multiplication_test.cpp  Mystring_test.cpp  Mystring_test.cpp~  testall_main.cpp
